--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/node": "^7.5.5",
-    "@babel/preset-env": "^7.5.5"
+    "@babel/preset-env": "^7.5.5",
+    "babel-eslint": "^10.0.2",
+    "eslint": "^6.2.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-babel": "^5.3.0"
   },
   "dependencies": {
+    "eslint-plugin-import": "^2.18.2",
     "readline-sync": "^1.4.10"
   }
 }
