more minor flaws corrected (keywords, switch statement)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "projects",
   "version": "1.0.0",
-  "description": "My first project; it's a pack of games.",
+  "description": "My first project done with Hexlet; it's a pack of games.",
   "main": "index.js",
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
@@ -19,6 +19,11 @@
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "prepublishOnly": "npm run build"
   },
+  "keywords": [
+    "games",
+    "learning project",
+    "Hexlet"
+  ],
   "author": "Anna Korotkikh",
   "license": "ISC",
   "dependencies": {
