some flaws fixed

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "author": "Anna Korotkikh",
   "license": "ISC",
   "dependencies": {
+    "@hexlet/pairs": "^1.0.10",
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
