--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projects",
+  "name": "project1",
   "version": "1.0.0",
   "description": "My first project done with Hexlet; it's a pack of games.",
   "bin": {
@@ -20,7 +20,7 @@
   },
   "keywords": [
     "games",
-    "learning project",
+    "practice project",
     "Hexlet"
   ],
   "author": "Anna Korotkikh",
@@ -39,5 +39,14 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.18.2"
-  }
+  },
+  "main": "babel.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/afreakanist/frontend-project-lvl1.git"
+  },
+  "bugs": {
+    "url": "https://github.com/afreakanist/frontend-project-lvl1/issues"
+  },
+  "homepage": "https://github.com/afreakanist/frontend-project-lvl1#readme"
 }
